<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:layout_margin="2dp">

        <TextView
            android:id="@+id/team_name_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:text="@string/team_text"
            android:textSize="17dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/played_match_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/play_text"
            android:textSize="17dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/won_match_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/won_text"
            android:textSize="17dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/lost_match_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lost_text"
            android:textSize="17dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/no_result_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nr_text"
            android:textSize="17dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/get_point_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pts_text"
            android:textSize="17dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/net_runrate_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/nrr_text"
            android:textSize="17dp"
            android:textStyle="normal" />
    </LinearLayout>
</android.support.v7.widget.CardView>