<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    android:layout_margin="3dp"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="3dp">

        <ImageView
            android:id="@+id/team_one_flag"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/team_two_flag"
            android:scaleType="fitXY"
            tools:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/team_two_flag"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:scaleType="fitXY"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/team_one_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="75dp"
            android:layout_marginTop="25dp"
            tools:text="@string/team_one_name_text" />

        <TextView
            android:id="@+id/vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/team_one_name"
            android:layout_centerHorizontal="true"
            android:text="@string/team_vs_text" />

        <TextView
            android:id="@+id/team_two_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/team_one_name"
            android:layout_marginEnd="75dp"
            android:text="@string/team_two_name_text" />

        <TextView
            android:id="@+id/match_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            tools:text="@string/match_no_text"/>

        <TextView
            android:id="@+id/match_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/team_one_name"
            android:layout_centerHorizontal="true"
            tools:text="@string/match_start_date_text" />

        <TextView
            android:id="@+id/match_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/match_start_date"
            android:layout_centerHorizontal="true"
            tools:text="@string/match_start_time_text" />

        <TextView
            android:id="@+id/match_venue_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/match_start_time"
            android:layout_centerHorizontal="true"
            tools:text="@string/match_vanue_name_text" />
    </RelativeLayout>
</android.support.v7.widget.CardView>