<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PointTableActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:padding="2dp"
        android:layout_margin="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:text="@string/team_text"
            android:textColor="@android:color/black"
            android:textSize="17dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/play_text"
            android:textColor="@android:color/black"
            android:textSize="17dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/won_text"
            android:textColor="@android:color/black"
            android:textSize="17dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lost_text"
            android:textColor="@android:color/black"
            android:textSize="17dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nr_text"
            android:textColor="@android:color/black"
            android:textSize="17dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pts_text"
            android:textColor="@android:color/black"
            android:textSize="17dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/nrr_text"
            android:textColor="@android:color/black"
            android:textSize="17dp"
            android:textStyle="normal" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/point_table_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>