<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.TeamInfoFragment">

    <TextView
        android:id="@+id/about_team_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="About England"
        android:padding="10dp"
        android:textColor="@color/textColorPrimary"
        android:layout_marginTop="20dp"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:id="@+id/nickname_text_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/nickname_text"
            android:textColor="@color/textColorPrimary"/>
        <TextView
            android:id="@+id/nickname_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            tools:text="@string/nickname_text"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:id="@+id/coachname_text_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColorPrimary"
            tools:text="@string/coach_text"/>
        <TextView
            android:id="@+id/coachname_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            tools:text="@string/coach_text"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:id="@+id/ranking_text_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColorPrimary"
            tools:text="@string/ranking_text"/>
        <TextView
            android:id="@+id/ranking_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            tools:text="@string/nickname_text"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:id="@+id/participation_text_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/wc_participation_text"
            android:textColor="@color/textColorPrimary"/>
        <TextView
            android:id="@+id/participation_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            tools:text="@string/nickname_text"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:id="@+id/performance_text_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColorPrimary"
            tools:text="@string/best_performance_text"/>
        <TextView
            android:id="@+id/performance_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            tools:text="@string/nickname_text"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:id="@+id/sponsor_text_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/sponsor_text"/>
        <TextView
            android:id="@+id/sponsor_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            tools:text="@string/nickname_text"/>

    </LinearLayout>

</LinearLayout>